# gcmulator

./: .gitignore  LICENSE  README.md  config.json  pyproject.toml  pytest.ini  requirements.txt  run.pbs  run.sh  spec.md
.claude/: settings.local.json
.mplcache/: fontlist-v390.json
export_benchmark/: README.md
extra/: batch_size_benchmark.py  predictions.py  pytorch_export.py  science.mplstyle  swampe_parity_compare.py  training_log.py
retrieval/: README.md  artifact_readiness.json  run_surrogate_nss.py  surrogate_backend.py
src/: __init__.py  config.py  constants.py  data_generation.py  geometry.py  main.py  modeling.py  my_swamp_backend.py  normalization.py  sampling.py  training.py
src/gcmulator/: __init__.py  __main__.py  config.py  data_generation.py  main.py  modeling.py  my_swamp_backend.py  normalization.py  sampling.py  training.py
tests/: test_config_validation.py  test_geometry.py  test_normalization.py  test_policy_enforcement.py  test_sampling.py  test_smoke.py
unit_tests/: conftest.py  test_config.py  test_data_generation.py  test_data_generation_legacy.py  test_geometry_and_sampling.py  test_modeling.py  test_normalization.py  test_retrieval_backend.py  test_training_logging.py  test_training_preprocess.py  test_training_resampled_pairs.py  test_training_runtime.py  test_training_scheduler.py
