[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gcmulator"
version = "0.1.0"
description = "Differentiable SFNO emulator for MY_SWAMP terminal shallow-water states"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "torch>=2.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src"]
